--- a/css/estilo.css
+++ b/css/estilo.css
@@ -11,7 +11,8 @@ font-family: 'Staatliches', cursive;
 }
 
 body {
-    background-image: url(../media/nintendo.jpg);
+    /* background-image: url(../media/nintendo.jpg); */
+    background-color: rgb(20, 19, 19);
     background-size: cover;
     background-repeat: repeat;
     background-position: center;
@@ -108,9 +109,9 @@ h1 {
 }
 
 .articulos {
-    display: inline-flex;
-    flex-wrap: wrap;
-    align-content: flex-start;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
 }
 
 .articulos div {
@@ -127,7 +128,7 @@ h1 {
 }
 
 .catgamer:hover {
-    background-color: rgb(146, 40, 150);
+    background-color: rgb(212, 52, 12);
     color: whitesmoke;
 }
 
@@ -135,7 +136,7 @@ h1 {
     height: fit-content;
     color: whitesmoke;
     background-image: linear-gradient(315deg, #2a2a72 0%, #0019fdcc 74%);
-    padding: 20px;
+    padding: 15px;
     text-align: center;
     grid-area: separador;
 }
@@ -186,6 +187,70 @@ h1 {
 
 .consejo p {
     flex-direction: column;
+}
+
+.contenedor1 {
+    width: 95%;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: repeat (3, 1fr);
+    grid-template-areas: "reco1 reco1 reco2" "reco3 reco4 reco4" "reco3 reco5 reco6";
+    flex-direction: row;
+    justify-content: center;
+}
+
+.contenedor1 div {
+    margin: 20px;
+    padding: 20px;
+    font-size: 1.4rem;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-direction: column;
+    justify-self: center;
+}
+
+.reco1 {
+    color: rgba(255, 255, 255, 0.973);
+    height: 400px;
+    background-image: url(../media/reco1.jpg);
+    grid-area: reco1;
+}
+
+.reco2 {
+    color: white;
+    height: 400px;
+    grid-area: reco2;
+    background-image: url(../media/reco2.jpg);
+}
+
+.reco3 {
+    color: rgb(221, 247, 221);
+    height: auto;
+    grid-area: reco3;
+    background-image: url(../media/reco3.jpg);
+}
+
+.reco4 {
+    color: rgb(0, 0, 0);
+    height: 400px;
+    background-image: url(../media/reco4.jpg);
+    grid-area: reco4;
+}
+
+.reco5 {
+    color: rgb(244, 244, 250);
+    height: 400px;
+    background-image: url(../media/reco5.jpg);
+    grid-area: reco5;
+}
+
+.reco6 {
+    color: #000000;
+    height: 400px;
+    background-image: url(../media/reco6.jpg);
+    grid-area: reco6;
 }
 
 .direcMapa {
@@ -259,9 +324,9 @@ footer {
 }
 
 
-/*Para celulares hasta 700 px*/
+/*Para celulares hasta 960 px*/
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 960px) {
     header {
         display: flex;
         flex-direction: column;
@@ -320,5 +385,16 @@ footer {
     }
     .foter2 {
         font-size: 10px;
+    }
+    .contenedor1 {
+        width: 95%;
+        display: flex;
+        flex-direction: column;
+    }
+    .contenedor1 div {
+        margin: 2%;
+        padding: 2%;
+        font-size: 1rem;
+        height: fit-content;
     }
 }
