--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,205 +1,119 @@
-/*
-font-family: 'Orbitron', sans-serif;
-font-family: 'Rajdhani', sans-serif;
-font-family: 'Staatliches', cursive;
-*/
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-body {
-    /* background-image: url(../media/nintendo.jpg); */
-    background-color: rgb(20, 19, 19);
-    background-size: cover;
-    background-repeat: repeat;
-    background-position: center;
-    font-family: 'Rajdhani', sans-serif;
-    position: relative;
-}
+footer {
+  width: 100%;
+  display: flex;
+  background: linear-gradient(315deg, #2a2a72 0%, #0019fdcc 74%);
+  flex-direction: row;
+  align-items: center;
+  text-align: center;
+  justify-content: space-around; }
+  footer .dire {
+    font-size: large;
+    color: whitesmoke; }
+  footer .footer__marca {
+    flex-direction: column;
+    align-items: center; }
+    footer .footer__marca .img {
+      width: 60px;
+      flex-direction: row; }
+    footer .footer__marca .logo {
+      width: 60px;
+      flex-direction: row; }
+    footer .footer__marca h1 {
+      color: #ffffff;
+      font-family: 'Orbitron', sans-serif;
+      font-size: 3rem;
+      margin-left: 5px;
+      text-shadow: 0 0 5px #00b2ff, 0 0 10px #00b2ff, 0 0 20px #00b2ff, 0 0 40px #26687f, 0 0 80px #26687f, 0 0 90px #26687f, 0 0 100px #26687f, 0 0 140px #26687f, 0 0 180px #26687f; }
+    footer .footer__marca .eslogan {
+      color: whitesmoke;
+      font-family: 'Staatliches', cursive;
+      display: inline-block;
+      text-align: center;
+      letter-spacing: 2px; }
 
 header {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.marca {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center; }
+  header .marca {
     display: flex;
     margin: 3px;
-    padding: 3px;
-}
-
-.logo {
-    width: 60px;
-    flex-direction: row;
-}
-
-h1 {
-    color: #ffffff;
-    font-family: 'Orbitron', sans-serif;
-    font-size: 3rem;
-    margin-left: 5px;
-    text-shadow: 0 0 5px rgba(0, 178, 255, 1), 0 0 10px rgba(0, 178, 255, 1), 0 0 20px rgba(0, 178, 255, 1), 0 0 40px rgba(38, 104, 127, 1), 0 0 80px rgba(38, 104, 127, 1), 0 0 90px rgba(38, 104, 127, 1), 0 0 100px rgba(38, 104, 127, 1), 0 0 140px rgba(38, 104, 127, 1), 0 0 180px rgba(38, 104, 127, 1);
-}
-
-.eslogan {
+    padding: 3px; }
+    header .marca .logo {
+      width: 60px;
+      flex-direction: row; }
+    header .marca h1 {
+      color: #ffffff;
+      font-family: 'Orbitron', sans-serif;
+      font-size: 3rem;
+      margin-left: 5px;
+      text-shadow: 0 0 5px #00b2ff, 0 0 10px #00b2ff, 0 0 20px #00b2ff, 0 0 40px #26687f, 0 0 80px #26687f, 0 0 90px #26687f, 0 0 100px #26687f, 0 0 140px #26687f, 0 0 180px #26687f; }
+  header .eslogan {
     color: whitesmoke;
     font-family: 'Staatliches', cursive;
     display: inline-block;
     text-align: center;
-    letter-spacing: 2px;
-}
-
-.buscador {
-    font-family: 'Rajdhani', sans-serif;
-    display: inline-block;
-    color: whitesmoke;
-    width: 30%;
-    border: solid whitesmoke 1px;
-    border-radius: 3px;
-}
-
-.redes {
+    letter-spacing: 2px; }
+  header .redes {
     display: inline-flex;
     justify-content: space-evenly;
-    margin: 10px;
-}
+    margin: 10px; }
+    header .redes img {
+      width: 32px;
+      flex-direction: row;
+      margin-right: 5px; }
 
-.redes img {
-    width: 32px;
-    flex-direction: row;
-    margin-right: 5px;
-}
-
-.navbar {
-    font-size: 22px;
-    text-align: center;
-}
-
-.navbar h1 {
-    font-size: medium;
-    margin: 0px 20px;
-}
-
-.categorias {
-    width: 160px;
-    background-color: #2758b3;
-    margin: 10px;
-    color: whitesmoke;
-    text-transform: capitalize;
-    text-align: left;
-    letter-spacing: 2px
-}
-
-.categorias ul {
-    padding: 0px;
-}
-
-.categorias ul li {
-    list-style: none;
-}
-
-.categorias ul li:hover {
-    color: rgb(152, 189, 224);
-    font-size: 105%;
-}
-
-.articulos {
+/*Para pantallas hasta 960 px*/
+@media screen and (max-width: 960px) {
+  header {
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; }
+    header .logo {
+      display: none; }
+    header h1 {
+      font-size: 2rem; }
+    header .eslogan {
+      font-size: 1rem; }
+    header .redes {
+      display: none; }
+  .categorias {
+    display: none; }
+  .articulos {
     flex-flow: row wrap;
-    justify-content: center;
-}
-
-.articulos div {
-    background-color: white;
-    margin: 10px;
-    border: solid grey 2px;
-    border-radius: 3%;
+    justify-content: space-evenly; }
+  .recreo div {
+    flex-direction: column; }
+  .direcMapa {
+    flex-direction: column; }
+  footer {
+    display: block; }
+  .footer1 {
     text-align: center;
-    transition: all 0.5s;
-}
-
-.articulos div:hover {
-    transform: scale(1.02, 1.02);
-}
-
-.catgamer:hover {
-    background-color: rgb(212, 52, 12);
-    color: whitesmoke;
-}
-
-.separador {
-    height: fit-content;
-    color: whitesmoke;
-    background-image: linear-gradient(315deg, #2a2a72 0%, #0019fdcc 74%);
-    padding: 15px;
-    text-align: center;
-    grid-area: separador;
-}
-
-.recreo {
-    color: whitesmoke;
+    justify-content: center; }
+  .foter2 {
+    font-size: 0.8rem; }
+  .contenedor1 {
+    width: 95%;
     display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-}
-
-.recreo__uno {
-    margin: 30px;
-    display: flex;
-    flex-direction: row-reverse;
-    align-items: center;
-}
-
-.recreo__dos {
-    margin: 30px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
-
-.recreo p {
-    text-align: center;
-    padding: 10px;
-}
-
-.consejo {
-    background-image: radial-gradient(ellipse, black, rgb(83, 36, 36), red);
-    margin: 10px;
-    display: block;
-    color: whitesmoke;
-    padding: 10px;
-    justify-content: center;
-}
-
-.consejo img {
-    flex-direction: row;
-}
-
-.consejo h2 {
-    flex-direction: column;
-}
-
-.consejo p {
-    flex-direction: column;
-}
+    flex-direction: column; }
+    .contenedor1 div {
+      margin: 2%;
+      padding: 2%;
+      font-size: 1rem;
+      height: fit-content; } }
 
 .contenedor1 {
-    width: 95%;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: repeat (3, 1fr);
-    grid-template-areas: "reco1 reco1 reco2" "reco3 reco4 reco4" "reco3 reco5 reco6";
-    flex-direction: row;
-    justify-content: center;
-}
-
-.contenedor1 div {
+  width: 95%;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: repeat 3, 1fr;
+  grid-template-areas: "reco1 reco1 reco2" "reco3 reco4 reco4" "reco3 reco5 reco6";
+  flex-direction: row;
+  justify-content: center; }
+  .contenedor1 div {
     margin: 20px;
     padding: 20px;
     font-size: 1.4rem;
@@ -208,193 +122,182 @@ h1 {
     align-items: center;
     justify-content: space-evenly;
     flex-direction: column;
-    justify-self: center;
-}
-
-.reco1 {
+    justify-self: center; }
+  .contenedor1 .reco1 {
     color: rgba(255, 255, 255, 0.973);
     height: 400px;
     background-image: url(../media/reco1.jpg);
-    grid-area: reco1;
-}
-
-.reco2 {
+    grid-area: reco1; }
+  .contenedor1 .reco2 {
     color: white;
     height: 400px;
     grid-area: reco2;
-    background-image: url(../media/reco2.jpg);
-}
-
-.reco3 {
-    color: rgb(221, 247, 221);
+    background-image: url(../media/reco2.jpg); }
+  .contenedor1 .reco3 {
+    color: #ddf7dd;
     height: auto;
     grid-area: reco3;
-    background-image: url(../media/reco3.jpg);
-}
-
-.reco4 {
-    color: rgb(0, 0, 0);
+    background-image: url(../media/reco3.jpg); }
+  .contenedor1 .reco4 {
+    color: black;
     height: 400px;
     background-image: url(../media/reco4.jpg);
-    grid-area: reco4;
-}
-
-.reco5 {
-    color: rgb(244, 244, 250);
+    grid-area: reco4; }
+  .contenedor1 .reco5 {
+    color: #f4f4fa;
     height: 400px;
     background-image: url(../media/reco5.jpg);
-    grid-area: reco5;
-}
-
-.reco6 {
+    grid-area: reco5; }
+  .contenedor1 .reco6 {
     color: #000000;
     height: 400px;
     background-image: url(../media/reco6.jpg);
-    grid-area: reco6;
-}
+    grid-area: reco6; }
 
-.direcMapa {
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box; }
+
+body {
+  background-color: #141313;
+  background-size: cover;
+  background-repeat: repeat;
+  background-position: center;
+  font-family: 'Rajdhani', sans-serif;
+  position: relative; }
+  body .navbar {
+    font-size: 22px;
+    text-align: center; }
+    body .navbar h1 {
+      font-size: medium;
+      margin: 0px 20px; }
+  body .categorias {
+    width: 160px;
+    background-color: #2758b3;
+    margin: 10px;
+    color: whitesmoke;
+    text-transform: capitalize;
+    text-align: left;
+    letter-spacing: 2px; }
+    body .categorias ul {
+      padding: 0px; }
+      body .categorias ul li {
+        list-style: none; }
+        body .categorias ul li:hover {
+          color: #98bde0;
+          font-size: 105%; }
+  body .articulos {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center; }
+    body .articulos div {
+      background-color: white;
+      margin: 10px;
+      border: solid grey 2px;
+      border-radius: 3%;
+      text-align: center;
+      transition: all 0.5s; }
+      body .articulos div:hover {
+        transform: scale(1.02, 1.02); }
+      body .articulos div:hover {
+        background-color: #d4340c;
+        color: whitesmoke; }
+  body .separador {
+    height: fit-content;
+    color: whitesmoke;
+    background-image: linear-gradient(315deg, #2a2a72 0%, #0019fdcc 74%);
+    padding: 15px;
+    text-align: center;
+    grid-area: separador; }
+  body .recreo {
+    color: whitesmoke;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center; }
+    body .recreo .recreo__uno {
+      margin: 30px;
+      display: flex;
+      flex-direction: row-reverse;
+      align-items: center; }
+      body .recreo .recreo__uno p {
+        text-align: center;
+        padding: 10px; }
+    body .recreo .recreo__dos {
+      margin: 30px;
+      display: flex;
+      flex-direction: row;
+      align-items: center; }
+      body .recreo .recreo__dos p {
+        text-align: center;
+        padding: 10px; }
+  body .direcMapa {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
-    margin-bottom: 20px;
-}
-
-.formulario {
-    width: 550px;
-    height: 550px;
-    margin: 10px;
-    padding: 6px;
-    background-image: linear-gradient(315deg, #2a2a72 0%, #00a0fdcc 74%);
-    letter-spacing: 2px;
-    color: aliceblue;
-    text-indent: 10px;
-}
-
-.ubicacion {
-    width: 550px;
-    height: 550px;
-    margin: 10px;
-    padding: 3px;
-    background-image: linear-gradient(315deg, #2a2a72 0%, #00a0fdcc 74%);
-    letter-spacing: 2px;
-    color: aliceblue;
-    text-align: center;
-}
-
-.ubicacion li {
-    list-style: none;
-}
-
-.submenu {
-    display: none;
-    position: absolute;
-}
-
-.menu1 li:hover .submenu {
-    display: block;
-    text-align: start;
-    font-size: 60%;
-    background-image: linear-gradient(315deg, #2a2a72 0%, #0019fdcc 74%);
-}
-
-input.enviarForm {
-    text-transform: capitalize;
-}
-
-.dire {
-    font-size: large;
-    color: whitesmoke;
-}
-
-footer {
-    width: 100%;
-    display: flex;
-    background-image: linear-gradient(315deg, #2a2a72 0%, #0019fdcc 74%);
-    flex-direction: row;
-    align-items: center;
-    text-align: center;
-    justify-content: space-around;
-}
-
-.footer__marca {
-    flex-direction: column;
-    align-items: center;
-}
-
+    margin-bottom: 20px; }
+    body .direcMapa .formulario {
+      width: 550px;
+      height: 550px;
+      margin: 10px;
+      padding: 6px;
+      background-image: linear-gradient(315deg, #2a2a72 0%, #0019fdcc 74%);
+      letter-spacing: 2px;
+      color: aliceblue;
+      text-indent: 10px; }
+      body .direcMapa .formulario input.enviarForm {
+        text-transform: capitalize; }
+    body .direcMapa .ubicacion {
+      width: 550px;
+      height: 550px;
+      margin: 10px;
+      padding: 3px;
+      background-image: linear-gradient(315deg, #2a2a72 0%, #0019fdcc 74%);
+      letter-spacing: 2px;
+      color: aliceblue;
+      text-align: center; }
+      body .direcMapa .ubicacion li {
+        list-style: none; }
 
 /*Para celulares hasta 960 px*/
-
 @media screen and (max-width: 960px) {
-    header {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-    .logo {
-        display: none;
-    }
-    h1 {
-        font-size: 30px;
-    }
-    .eslogan {
-        font-size: 15px;
-    }
-    .buscador {
-        width: 90%;
-    }
-    .redes {
-        display: none;
-    }
-    .menu1 li {
-        display: block;
-        justify-content: flex-start;
-        padding: 0%;
-        border-bottom-left-radius: solid 1px white;
-        font-size: 15px;
-    }
-    .img1 {
-        height: auto;
-        margin-bottom: 0%;
-    }
-    .centro {
-        display: flex;
-        flex-flow: row wrap;
-    }
-    .categorias {
-        display: none;
-    }
-    .articulos {
-        flex-flow: row wrap;
-        justify-content: space-evenly;
-    }
-    .recreo div {
-        flex-direction: column;
-    }
-    .direcMapa {
-        flex-direction: column;
-    }
-    footer {
-        display: block;
-    }
-    .footer1 {
-        text-align: center;
-        justify-content: center;
-    }
-    .foter2 {
-        font-size: 10px;
-    }
-    .contenedor1 {
-        width: 95%;
-        display: flex;
-        flex-direction: column;
-    }
-    .contenedor1 div {
-        margin: 2%;
-        padding: 2%;
-        font-size: 1rem;
-        height: fit-content;
-    }
-}
+  header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; }
+    header .logo {
+      display: none; }
+    header h1 {
+      font-size: 30px; }
+    header .eslogan {
+      font-size: 15px; }
+    header .redes {
+      display: none; }
+  .categorias {
+    display: none; }
+  .articulos {
+    flex-flow: row wrap;
+    justify-content: space-evenly; }
+  .recreo div {
+    flex-direction: column; }
+  .direcMapa {
+    flex-direction: column; }
+  footer {
+    display: column; }
+  .footer1 {
+    text-align: center;
+    justify-content: center; }
+  .foter2 {
+    font-size: 10px; }
+  .contenedor1 {
+    width: 95%;
+    display: flex;
+    flex-direction: column; }
+  .contenedor1 div {
+    margin: 2%;
+    padding: 2%;
+    font-size: 1rem;
+    height: fit-content; } }
