--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -18,23 +18,39 @@ footer {
             width: 60px;
             flex-direction: row;
         }
-        .logo {
-            width: 60px;
+    }
+    .logo {
+        width: 60px;
+        flex-direction: row;
+    }
+    h1 {
+        color: #ffffff;
+        font-family: 'Orbitron', sans-serif;
+        font-size: 3rem;
+        margin-left: 5px;
+        text-shadow: $neon;
+    }
+    .eslogan {
+        color: whitesmoke;
+        font-family: 'Staatliches', cursive;
+        display: inline-block;
+        text-align: center;
+        letter-spacing: 2px;
+    }
+    .redes {
+        display: inline-flex;
+        justify-content: space-evenly;
+        margin: 10px;
+        img {
+            width: 32px;
             flex-direction: row;
+            margin-right: 5px;
         }
-        h1 {
-            color: #ffffff;
-            font-family: 'Orbitron', sans-serif;
-            font-size: 3rem;
-            margin-left: 5px;
-            text-shadow: $neon;
-        }
-        .eslogan {
-            color: whitesmoke;
-            font-family: 'Staatliches', cursive;
-            display: inline-block;
-            text-align: center;
-            letter-spacing: 2px;
-        }
+    }
+    a {
+        color: white;
+        text-shadow: $neon;
+        font-size: 1, 3rem;
+        text-decoration: none;
     }
 }
