--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,6 +1,7 @@
 //variables//
 $fondo_grad: linear-gradient(315deg, #2a2a72 0%, #0019fdcc 74%);
 $fondo_solid: #2758b3;
+$fondo_claro: rgb(232, 231, 243);
 $neon:0 0 5px rgba(0, 178, 255, 1),
 0 0 10px rgba(0, 178, 255, 1),
 0 0 20px rgba(0, 178, 255, 1),
