--- a/scss/_articulos.scss
+++ b/scss/_articulos.scss
@@ -8,17 +8,18 @@
         background-color: whitesmoke;
         margin: 20px;
         padding: 5px;
-        border: solid grey 2px;
+        border: solid #999 1px;
         border-radius: 3%;
         justify-content: center;
         text-align: center;
         transition: all 0.5s;
         &:hover {
             transform: scale(1.03, 1.03);
+            box-shadow: 2px 2px 5px #999;
+            -moz-box-shadow: 2px 2px 5px #999;
         }
     }
     .catsoft {
-        border: none;
         border-radius: 0%;
         width: 70%;
         display: flex;
@@ -26,8 +27,7 @@
         div {
             text-align: center;
             justify-items: center;
-            border-radius: 0%;
-            border-left: rgb(179, 172, 172) 2px;
+            border: none;
         }
     }
 }
