--- a/scss/_hard.scss
+++ b/scss/_hard.scss
@@ -4,10 +4,11 @@
     height: auto;
     .categorias {
         float: left;
-        width: 25%;
+        width: 30%;
         background-color: $fondo_solid;
-        margin: 20px;
+        margin: 0 10px 0 0;
         color: whitesmoke;
+        font-family: 'orbitron';
         text-transform: capitalize;
         text-align: left;
         letter-spacing: 2px;
