--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -13,7 +13,7 @@
 }
 
 body {
-    background-color: rgb(41, 30, 66);
+    background-image: url(../media/techgris.jpg);
     background-size: cover;
     background-repeat: repeat;
     background-position: center;
@@ -22,15 +22,14 @@ body {
 }
 
 .separador {
-    height: fit-content;
-    color: whitesmoke;
-    background-image: $fondo_grad;
+    color: rgb(26, 22, 56);
     padding: 15px;
     text-align: center;
+    margin: 20px 0 10px 0;
     grid-area: separador;
 }
 
-.direcMapa {
+    .direcMapa {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
@@ -64,6 +63,8 @@ body {
     }
 }
 
+
+// vista movile hasta 960px //
 @media screen and (max-width: 960px) {
     header {
         display: flex;
@@ -104,13 +105,12 @@ body {
     }
     footer {
         display: block;
-    }
-    .footer1 {
-        text-align: center;
-        justify-content: center;
-    }
-    .foter2 {
-        font-size: 0.8rem;
+        .dire{
+            color: black;
+        }
+        .logo{
+            display: none;
+        }
     }
     .recomendaciones {
         display: flex;
