--- a/scss/_articulos.scss
+++ b/scss/_articulos.scss
@@ -4,13 +4,17 @@
     flex-wrap: wrap;
     justify-content: center;
     div {
+        width: 220px;
+        height: 330px;
         color: rgb(34, 31, 31);
         background-color: whitesmoke;
         margin: 20px;
         padding: 5px;
-        border: solid #999 1px;
+        border: solid rgb(190, 187, 187) 1px;
         border-radius: 3%;
-        justify-content: center;
+        flex-direction: column;
+        display: flex;
+        justify-content: space-around;
         text-align: center;
         transition: all 0.5s;
         &:hover {
@@ -24,10 +28,17 @@
         width: 70%;
         display: flex;
         flex-direction: row;
+        img{
+            width: 25%;
+        }
         div {
+            width: auto;
+            height: auto;
             text-align: center;
             justify-items: center;
             border: none;
+            box-shadow: none;
+            transform: none;
         }
     }
 }
