--- a/scss/_recreo.scss
+++ b/scss/_recreo.scss
@@ -1,8 +1,9 @@
 @import "variables";
-.recreo {
+.gameneews {
+    width: 95%;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: center;
     color: black;
 }
 
