--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -5,7 +5,7 @@
 @import "recomendaciones";
 @import "articulos";
 @import "recreo";
-//normalize reset//
+
 * {
     margin: 0;
     padding: 0;
@@ -29,14 +29,13 @@ body {
     grid-area: separador;
 }
 
-    .direcMapa {
+.direcMapa {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    align-items: center;
-    margin-bottom: 20px;
+    margin: 10px;
     .formulario {
-        width: 550px;
+        width: 35%;
         height: 550px;
         margin: 10px;
         padding: 6px;
@@ -49,7 +48,7 @@ body {
         }
     }
     .ubicacion {
-        width: 550px;
+        width: 35%;
         height: 550px;
         margin: 10px;
         padding: 3px;
@@ -57,6 +56,10 @@ body {
         letter-spacing: 2px;
         color: aliceblue;
         text-align: center;
+        iframe{
+            width: 90%;
+            height: 400px;
+        }
         li {
             list-style: none;
         }
@@ -91,6 +94,8 @@ body {
         flex-flow: row wrap;
         justify-content: space-evenly;
         .catsoft {
+            width: auto;
+            height: auto;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -102,11 +107,24 @@ body {
     }
     .direcMapa {
         flex-direction: column;
+        .formulario{
+            width: 90%;
+        }
+        .ubicacion{
+            width: 90%;
+        }
     }
     footer {
-        display: block;
+        width: 90%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        text-align: center;
+        h6{
+            color: whitesmoke;
+        }
         .dire{
-            color: black;
+            color: $fondo_solid;
         }
         .logo{
             display: none;
