cambie imagenes, margenes y detalles varios

--- a/scss/_articulos.scss
+++ b/scss/_articulos.scss
@@ -7,7 +7,7 @@
         width: 220px;
         height: 330px;
         color: rgb(34, 31, 31);
-        background-color: whitesmoke;
+        background-color: white;
         margin: 20px;
         padding: 5px;
         border: solid rgb(190, 187, 187) 1px;
