--- a/scss/_recomendaciones.scss
+++ b/scss/_recomendaciones.scss
@@ -49,6 +49,7 @@
     }
     .reco6 {
         background-image: url(../media/tips/reco6.jpg);
+        color: white;
         grid-area: reco6;
     }
 }
