--- a/estilo.css
+++ b/estilo.css
@@ -489,6 +489,7 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  background: #0e0f3b;
   padding: 6px;
   border-radius: 10px;
   width: auto;
