--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -13,9 +13,8 @@
 }
 
 body {
-    background-image: url(../media/techgris.jpg);
+    background-image: url(../media/principales/techgris.jpg);
     background-size: cover;
-    background-repeat: repeat;
     background-position: center;
     font-family: 'Rajdhani', sans-serif;
     position: relative;
@@ -35,33 +34,43 @@ body {
     justify-content: space-evenly;
     margin: 10px;
     .formulario {
-        width: 35%;
+        width: auto;
         height: 550px;
-        margin: 10px;
         padding: 6px;
-        background-image: $fondo_grad;
+        border-radius: 10px;
+        background: $fondo_solid;
         letter-spacing: 2px;
         color: aliceblue;
         text-indent: 10px;
-        input.enviarForm {
+        .enviarForm input{
             text-transform: capitalize;
+            color: rgb(26, 26, 73);
+            padding: 2px;
+            &:hover{
+                color: whitesmoke;
+                background-color: rgb(42, 28, 117);
+            }
         }
     }
     .ubicacion {
-        width: 35%;
-        height: 550px;
-        margin: 10px;
-        padding: 3px;
-        background-image: $fondo_grad;
-        letter-spacing: 2px;
-        color: aliceblue;
+        display: flex;
+        flex-direction: column;
+        padding: 6px;
+        border-radius: 10px;
+        width: auto;
+        height: auto;
+        color: rgb(27, 25, 61);
         text-align: center;
+        .direccion{
+            margin: 15px;
+        } 
+            p{
+                margin: 0%;
+                font-size: 1.2rem;
+            }
         iframe{
-            width: 90%;
+            width: 400px;
             height: 400px;
-        }
-        li {
-            list-style: none;
         }
     }
 }
@@ -104,14 +113,13 @@ body {
     .recreo div {
         width: 100%;
         flex-direction: column;
+        justify-content: center;
     }
     .direcMapa {
         flex-direction: column;
-        .formulario{
-            width: 90%;
-        }
+        margin: 20px;
         .ubicacion{
-            width: 90%;
+            margin-top: 20px;
         }
     }
     footer {
@@ -133,12 +141,20 @@ body {
     .recomendaciones {
         display: flex;
         flex-direction: column;
-        width: 95%;
         div {
             margin: 2%;
             padding: 2%;
             font-size: 1rem;
             height: fit-content;
+        }
+        .reco3 {
+            display: none;
+        }
+        .reco4 {
+            display: none;
+        }
+        .reco5 {
+            display: none;
         }
     }
 }
