--- a/css/estilo.css
+++ b/css/estilo.css
@@ -23,15 +23,27 @@ footer h6 {
 
 footer .dire {
   font-size: large;
-  color: whitesmoke;
+  color: #799ab4;
 }
 
 footer .dire h6 {
-  margin: 0px;
+  font-size: 0.8rem;
+  font-family: 'Orbitron', sans-serif;
+  color: #799ab4;
 }
 
 footer .dire p {
-  margin: 5px;
+  margin: 2px;
+  color: whitesmoke;
+}
+
+footer .dire a {
+  text-shadow: none;
+  color: whitesmoke;
+}
+
+footer .dire a:hover {
+  text-shadow: 0 0 5px #00b2ff, 0 0 10px #00b2ff, 0 0 20px #00b2ff, 0 0 40px #26687f;
 }
 
 footer .footer__marca {
@@ -65,7 +77,7 @@ footer h1 {
   font-family: 'Orbitron', sans-serif;
   font-size: 3rem;
   margin-left: 5px;
-  text-shadow: 0 0 5px #00b2ff, 0 0 10px #00b2ff, 0 0 20px #00b2ff, 0 0 40px #26687f, 0 0 80px #26687f, 0 0 90px #26687f, 0 0 100px #26687f, 0 0 140px #26687f, 0 0 180px #26687f;
+  text-shadow: 0 0 5px #00b2ff, 0 0 10px #00b2ff, 0 0 20px #00b2ff, 0 0 40px #26687f;
 }
 
 footer .eslogan {
@@ -95,15 +107,20 @@ footer .redes img {
   margin: 0px 10px;
 }
 
+footer .redes img:hover {
+  -webkit-filter: drop-shadow(0 0 2px #378b72);
+          filter: drop-shadow(0 0 2px #378b72);
+}
+
 footer a {
   color: white;
-  text-shadow: 0 0 5px #00b2ff, 0 0 10px #00b2ff, 0 0 20px #00b2ff, 0 0 40px #26687f, 0 0 80px #26687f, 0 0 90px #26687f, 0 0 100px #26687f, 0 0 140px #26687f, 0 0 180px #26687f;
+  text-shadow: 0 0 5px #00b2ff, 0 0 10px #00b2ff, 0 0 20px #00b2ff, 0 0 40px #26687f;
   font-size: 1, 3rem;
   text-decoration: none;
 }
 
 footer a:hover {
-  color: #d3d5db;
+  color: #90f8f8;
 }
 
 header {
@@ -123,42 +140,38 @@ header {
           align-items: center;
 }
 
-header .marca {
+header .marca a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin: 3px;
-  padding: 3px;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-}
-
-header .marca .logo {
-  width: 60px;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
+  margin: 3px;
+  padding: 3px;
+  -ms-flex-line-pack: start;
+      align-content: flex-start;
+  text-decoration: none;
 }
 
-header .marca h1 {
+header .marca a .logo {
+  width: 60px;
+}
+
+header .marca a h1 {
   color: #ffffff;
   font-family: 'Orbitron', sans-serif;
   font-size: 3rem;
-  margin-left: 5px;
-  text-shadow: 0 0 5px #00b2ff, 0 0 10px #00b2ff, 0 0 20px #00b2ff, 0 0 40px #26687f, 0 0 80px #26687f, 0 0 90px #26687f, 0 0 100px #26687f, 0 0 140px #26687f, 0 0 180px #26687f;
+  margin: 0px 5px;
+  text-shadow: 0 0 5px #00b2ff, 0 0 10px #00b2ff, 0 0 20px #00b2ff, 0 0 40px #26687f;
+  list-style-type: none;
 }
 
 header .eslogan {
   color: whitesmoke;
   font-family: 'Staatliches';
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  margin: 2px;
   text-align: center;
   letter-spacing: 2px;
 }
@@ -175,6 +188,11 @@ header .redes {
 header .redes img {
   width: 40px;
   margin: 0px 10px;
+}
+
+header .redes img:hover {
+  -webkit-filter: drop-shadow(0 0 2px #4cf7c3);
+          filter: drop-shadow(0 0 2px #4cf7c3);
 }
 
 .repuestos {
@@ -422,29 +440,6 @@ header .redes img {
           flex-direction: row-reverse;
 }
 
-* {
-  margin: 0;
-  padding: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-}
-
-body {
-  background-image: url(../media/principales/techgris.jpg);
-  background-size: cover;
-  background-position: center;
-  font-family: 'Rajdhani', sans-serif;
-  position: relative;
-}
-
-.separador {
-  color: #1a1638;
-  padding: 15px;
-  text-align: center;
-  margin: 20px 0 10px 0;
-  grid-area: separador;
-}
-
 .direcMapa {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -460,7 +455,9 @@ body {
 }
 
 .direcMapa .formulario {
-  width: auto;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
   height: 550px;
   padding: 6px;
   border-radius: 10px;
@@ -490,25 +487,56 @@ body {
       -ms-flex-direction: column;
           flex-direction: column;
   padding: 6px;
-  border-radius: 10px;
   width: auto;
   height: auto;
   color: #1b193d;
   text-align: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .direcMapa .ubicacion .direccion {
   margin: 15px;
 }
 
-.direcMapa .ubicacion p {
+.direcMapa .ubicacion .direccion p {
   margin: 0%;
   font-size: 1.2rem;
 }
 
 .direcMapa .ubicacion iframe {
-  width: 400px;
-  height: 400px;
+  width: auto;
+  height: auto;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+body {
+  background-image: url(../media/principales/techgris.jpg);
+  background-size: cover;
+  background-position: center;
+  font-family: 'Rajdhani', sans-serif;
+  position: relative;
+}
+
+.separador {
+  color: #1a1638;
+  text-align: center;
+  margin: 30px 5px 10px 5px;
+}
+
+.nav-item {
+  margin: 0px 10px;
+}
+
+.nav-item .nav-link:hover {
+  text-shadow: 0 0 5px #00b2ff, 0 0 10px #00b2ff, 0 0 20px #00b2ff, 0 0 40px #26687f !important;
 }
 
 @media screen and (max-width: 960px) {
@@ -580,13 +608,16 @@ body {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     margin: 20px;
   }
   .direcMapa .ubicacion {
     margin-top: 20px;
   }
   footer {
-    width: 90%;
+    background: #0e0f3b;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -594,16 +625,11 @@ body {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    text-align: center;
+    justify-items: center;
   }
   footer h6 {
     color: whitesmoke;
-  }
-  footer .dire {
-    color: #0e0f3b;
+    letter-spacing: 2px;
   }
   footer .logo {
     display: none;
