--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,9 +5,4 @@ $fondo_claro: rgb(232, 231, 243);
 $neon:0 0 5px rgba(0, 178, 255, 1),
 0 0 10px rgba(0, 178, 255, 1),
 0 0 20px rgba(0, 178, 255, 1),
-0 0 40px rgba(38, 104, 127, 1),
-0 0 80px rgba(38, 104, 127, 1),
-0 0 90px rgba(38, 104, 127, 1),
-0 0 100px rgba(38, 104, 127, 1),
-0 0 140px rgba(38, 104, 127, 1),
-0 0 180px rgba(38, 104, 127, 1);
+0 0 40px rgba(38, 104, 127, 1),;
