--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -13,11 +13,10 @@ footer {
     }
     .dire {
         font-size: large;
-        color: #799ab4;
         h6{
             font-size: 0.8rem;
             font-family: 'Orbitron', sans-serif;
-            color: #799ab4;
+            color: #62bdc0;
         }
         p{
             margin: 2px;
@@ -76,7 +75,7 @@ footer {
         font-size: 1, 3rem;
         text-decoration: none;
         &:hover{
-            color: rgb(144, 248, 248);
+            color: rgb(151, 240, 240);
         }
     }
 }
