--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -46,7 +46,7 @@ body {
             display: none;
         }
         h1 {
-            font-size: 2rem;
+            font-size: 1.6rem;
         }
         .eslogan {
             font-size: 1rem;
@@ -70,7 +70,7 @@ body {
         }
     }
     .recreo div {
-        width: 100%;
+        width: auto;
         flex-direction: column;
         justify-content: center;
     }
