--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -7,14 +7,19 @@
     justify-content: space-evenly;
     margin: 10px;
     .formulario{
-        width: fit-content  ;
-        height: 550px;
+        width: fit-content;
+        height: 600px;
         padding: 6px;
         border-radius: 10px;
         background: $fondo_solid;
-        letter-spacing: 2px;
-        color: aliceblue;
         text-indent: 10px;
+        letter-spacing: 1.3px;
+        color: aliceblue;
+        textarea{
+            width: 400px !important;  
+            height: 250px !important;
+            resize: none; 
+        }
         .enviarForm input{
             text-transform: capitalize;
             color: rgb(26, 26, 73);
@@ -42,8 +47,8 @@
             }
         } 
         iframe{
-            width: auto;
-            height: auto;
+            width: 400px;
+            height: 400px;
         }
     }
 }
